# SenandCode

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  run.bat  vercel.json
.opencode/: lsp.json
docs/: index.html
examples/: array.sen  biodata.sen  error.sen  hello.sen  hitung_mundur.sen  lingkaran.sen  sapa.sen  string_ops.sen
senandika/: __init__.py  __main__.py  interpreter.py  lexer.py  parser.py  syntax_analyzer.py
