[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senandika"
version = "0.1.0"
description = "SenandCode - Bahasa pemrograman puitis dalam Bahasa Indonesia"
readme = "README.md"
authors = [{ name = "Muhammad Ikhwan Fathulloh" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
senandika = "senandika.__main__:main"

[tool.setuptools.packages.find]
include = ["senandika*"]
