[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senandika"
version = "0.1.1"
description = "SenandCode — bahasa pemrograman puitis dalam Bahasa Indonesia. Setiap baris adalah puisi."
readme = "README.md"
authors = [{ name = "Muhammad Raid Zakwan", email = "zmuhammadraid@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
keywords = ["bahasa-indonesia", "programming-language", "poetic", "interpreter", "senandcode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/zmy16/SenandCode"
Repository = "https://github.com/zmy16/SenandCode"

[project.scripts]
senandika = "senandika.__main__:main"

[tool.setuptools.packages.find]
include = ["senandika*"]

[tool.setuptools.package-data]
senandika = ["*.py"]
